# mage

py_mage/: MIGRATION_PLAN.md  README.md  build_backend.py  pyproject.toml  setup.cfg  setup.py  verify.ps1  verify.sh
py_mage/docs/: ARCHITECTURE.md  CATALOG_REPORT.md  VALIDATION.md
py_mage/py_mage/: __init__.py  __main__.py  cli.py
py_mage/py_mage/cards/: basic.py  mage_import.py  registry.py
py_mage/py_mage/core/: abilities.py  card.py  combat.py  events.py  game_state.py  invariants.py  layers.py  mana.py  player.py  priority.py  replacement.py  sba.py  stack.py  turn.py  zones.py
py_mage/py_mage/tests/: test_cards_report.py  test_golden.py  test_import_mage.py  test_mana_and_types.py  test_spells.py  test_turns.py
py_mage/py_mage/tests/golden/cast_spell_simple/: expected_log.txt  expected_state.json  input.json
py_mage/py_mage/tests/golden/combat_simple/: expected_log.txt  expected_state.json  input.json
py_mage/py_mage/tests/golden/mana_payment/: expected_log.txt  expected_state.json  input.json
py_mage/py_mage/validation/: runner.py  state.py
