[metadata]
name = py-mage
version = 0.1.0
description = Incremental Python migration of the MAGE rules engine
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.11
install_requires =

[options.extras_require]
dev =
    pytest>=7

[options.packages.find]
where = py_mage
